refactor: update landing page metadata for clarity and engagement
- Revised the title and description in the landing page to better convey the agent's adaptability and user-centric features.
- Enhanced Open Graph description for improved social media sharing and clarity of the agent's capabilities.

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hermes Agent — An AI Agent You Can Actually Live With</title>
-    <meta name="description" content="Open-source AI agent that lives on your server, learns your projects, builds its own skills, and reaches you wherever you are. By Nous Research.">
+    <title>Hermes Agent — An Agent That Grows With You</title>
+    <meta name="description" content="An open-source agent that grows with you — learns your projects, builds its own skills, and reaches you wherever you are. By Nous Research.">
     <meta name="theme-color" content="#0a0a0f">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Hermes Agent — AI Agent Framework">
-    <meta property="og:description" content="An open-source AI agent you can actually live with. Install it, give it your messaging accounts, and it becomes a persistent personal agent that grows with you.">
+    <meta property="og:description" content="An open-source agent that grows with you. Install it, give it your messaging accounts, and it becomes a persistent personal agent — learning your projects, building its own skills, and reaching you wherever you are.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://github.com/NousResearch/hermes-agent">
     
